--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		</div>
 		<div class="imgtext">
 				<img class="img" src="img/alexander-slash-1211213-unsplash.jpg"> 
+				<p class="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
 		</div>
 
 	</section>
