--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>animation</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="CSS/reset.css">
+	<link rel="stylesheet" type="text/css" href="CSS/style.css">
 
 </head>
 <body>
